# DesktopNotifyKT

./: .gitignore  .gitmodules  README.MD  settings.gradle.kts
composenotification/: build.gradle.kts
composenotification/src/androidMain/: AndroidManifest.xml
demo/: build.gradle.kts
demo/composeApp/: build.gradle.kts
demo/composeApp/src/jvmMain/kotlin/: Main.kt
demo/iosApp/: run_ios.sh
demo/iosApp/Configuration/: Config.xcconfig
demo/iosApp/iosApp/: Info.plist  iosApp.swift
demo/iosApp/iosApp.xcodeproj/: project.pbxproj
demo/iosApp/knotifyDemo/: ContentView.swift  knotifyDemoApp.swift
demo/iosApp/knotifyDemo.xcodeproj/: project.pbxproj
demo/iosApp/knotifyDemoTests/: knotifyDemoTests.swift
demo/iosApp/knotifyDemoUITests/: knotifyDemoUITests.swift  knotifyDemoUITestsLaunchTests.swift
demo/src/desktopMain/kotlin/: Main.kt
demo/src/wasmJsMain/kotlin/: main.kt
demo/src/wasmJsMain/resources/: index.html  service-worker.js  sw.js
gradle/: libs.versions.toml
knotify/: build.gradle.kts
knotify-compose/: README.md  build.gradle.kts
knotify/src/jvmMain/c/MacNotificationLib/: README.md
knotify/src/jvmMain/c/MacNotificationLib/src/: build.sh
knotify/src/jvmMain/resources/: libMacNotification.dylib
knotify/src/jvmMain/resources/darwin-aarch64/: libMacNotification.dylib
knotify/src/jvmMain/resources/darwin-x86-64/: libMacNotification.dylib
knotify/src/wasmJsMain/resources/: sw.js
linuxlib/: CMakeLists.txt  build.sh  linux_notification_library.c  linux_notification_library.h
maclib/: build.sh  mac_notification_library.swift
(+72 files in other folders)
